@@ -1,88 +1,76 @@
 package com.demo.Spring.repository;
 
 import com.demo.Spring.entities.model.Event;
+import com.demo.Spring.exceptions.RepoException;
 import lombok.Getter;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-
-import com.demo.Spring.exceptions.RepoException;
-import com.demo.Spring.utils.MapperUtils;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Repository;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Optional;
-@Service
+
+import static com.demo.Spring.utils.MapperUtils.mapToEventList;
+import static com.demo.Spring.utils.MapperUtils.mapToJson;
+
+@Repository
 public class EventRepository {
 
     private static final Logger logger = LogManager.getLogger();
+    private static final String PATH = "src/main/resources/repository/events.json";
 
     @Getter
-    private final ArrayList<Event> events; // le decimos que se llene con lo que esta en el archivo json.
+    private final ArrayList<Event> events;
 
-    private final MapperUtils mapperUtils;
+    private Integer nextId;
 
-    public EventRepository(MapperUtils mapperUtils) {
-        this.mapperUtils = mapperUtils;
+    public EventRepository() {
         this.events = loadEvents();
+        this.nextId = events.stream().mapToInt(Event::getId).max().orElse(1);
     }
 
     private ArrayList<Event> loadEvents() {
-        String path = "src/main/resources/repository/events.json";
         try {
-            byte[] bytes = Files.readAllBytes(Paths.get("src/main/resources/repository/events.json"));
+            byte[] bytes = Files.readAllBytes(Path.of(PATH));
             String input = new String(bytes);
-            return this.mapperUtils.mapToEventList(input);
+            return mapToEventList(input);
         } catch (IOException io) {
-            logger.fatal("Error reading file located at {} ", path);
+            logger.fatal("Error reading file located at {} ", PATH);
             throw new RepoException("Error reading file");
         }
     }
 
     private void save() {
         try {
-            String datos = mapperUtils.mapToJson(events);
-            byte[] bytes = datos.getBytes(StandardCharsets.UTF_8);
-            Files.write(Paths.get("src/main/resources/repository/events.json"), bytes);
+            String datos = mapToJson(events);
+            Files.writeString(Path.of(PATH), datos);
         } catch (IOException io) {
             throw new RepoException("Error writing file");
         }
     }
 
     public Optional<Event> find(int id) {
-        Optional<Event> result = Optional.empty();
-        for (Event e: events) {
-            if (e.getId() == id) {
-                result = Optional.of(e);
-            }
-        }
-        return result;
+        return events.stream().filter(e -> e.getId() == id).findFirst();
     }
 
     public void add(Event newEvent) {
+        newEvent.setId(nextId);
         events.add(newEvent);
         save();
+        nextId += 1;
     }
 
     public void delete(int id) {
-        Optional<Event> foundEvent = find(id);
-        if (foundEvent.isPresent()){
-            events.remove(foundEvent.get());
-            save();
-        }
+        events.removeIf(e -> e.getId() == id);
+        save();
     }
 
-    public void update(int id, Event updateInfo) {
-        Optional<Event> optionalEvent = find(id);
-        if (optionalEvent.isPresent()) {
-            Event foundEvent = optionalEvent.get();
-            events.remove(foundEvent);
-            foundEvent.update(updateInfo);
-            events.add(foundEvent);
-            save();
-        }
+    public void update(int id, Event newEventData) {
+        events.removeIf(e -> e.getId() == id);
+        events.add(newEventData);
+        save();
     }
 }
